[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.6.4",
    "yt-dlp>=2025.10.22",
    "PyNaCl==1.5.0",
    "requests>=2.32.5",
    "flask>=3.1.2",
    "spotipy>=2.25.1",
    "youtube-search-python>=1.6.6",
]
